# quant_intel_backend

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  compose.yml  debug_comprehensive.py  debug_comprehensive_numpy.py  prove_viability.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  celery_app.py  config.py  extensions.py  json_provider.py  logging_config.py
app/core/: decorators.py  result.py
app/models/: audit.py  danger_zone_snapshot.py  market.py  market_weather_snapshot.py
app/observablity/: prom.py
app/resources/: advanced_analytics.py  health.py  market.py  regime.py  trade.py
app/schemas/: market.py
app/services/: danger_zones.py  data_manager.py  institutional_flow.py  intraday_regime.py  liquidity_drought.py  liquidity_vacuum.py  market_service.py  market_storm.py  market_weather.py  narrative_momentum.py  options_danger_zones.py  pattern_recognition.py  portfolio_stress.py  regime_engine.py  sentiment_velocity.py  stress_propagation.py
app/tasks/: fetch.py  market_tasks.py  quality.py
app/trading/: alpaca_client.py
app/utils/: audit.py  secrets.py  symbols.py
deployments/nginx/: nginx.conf
execution/: engine.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: providers.tsx
frontend/components/dashboard/: advanced-chart.tsx  market-weather.tsx
frontend/lib/: utils.ts
instance/: data.db
integrations/: angel_auth.py  angel_one.py
tests/: quick_test.py  test_novel_features.py
(+2 files in other folders)
